# fastest-fe

./: Dockerfile  README.md  pyproject.toml
fastest/: app.py
fastest_fe/: app.py
templates/: base.html  index.html
